--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
   "editor.renderWhitespace": "boundary",
   "files.encoding": "utf8",
-  "files.trimTrailingWhitespace": true,
   "files.insertFinalNewline": true,
   "search.exclude": {
     "_book/**": true,
@@ -12,12 +11,12 @@
   },
   "typescript.tsdk": "./node_modules/typescript/lib",
   "[json]": {
-    "editor.formatOnSave": true
+    "editor.formatOnSave": false
   },
   "[javascript]": {
-    "editor.formatOnSave": true
+    "editor.formatOnSave": false
   },
   "[typescript]": {
-    "editor.formatOnSave": true
+    "editor.formatOnSave": false
   }
 }
