--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "//": "If you add or change the names of destinations in screeps.json, make sure you update these scripts to reflect the changes",
   "scripts": {
-    "lint": "tslint -p tsconfig.json \"src/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json \"screepsAI/**/*.ts\"",
     "build": "rollup -c",
     "push-main": "rollup -c --environment DEST:main",
     "push-pserver": "rollup -c --environment DEST:pserver",
@@ -39,7 +39,7 @@
     "lodash": "^3.10.1",
     "mocha": "^5.2.0",
     "prettier": "^1.14.0",
-    "rollup": "^0.63.4",
+    "rollup": "^0.63.5",
     "rollup-plugin-buble": "^0.19.4",
     "rollup-plugin-clear": "^2.0.7",
     "rollup-plugin-commonjs": "^9.1.4",
