--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "push-sim": "rollup -c --environment DEST:sim",
     "test": "npm run test-unit && npm run test-integration",
     "test-unit": "rollup -c rollup.test-unit-config.js && mocha dist/test-unit.bundle.js",
+    "test-unit-coverage": "rollup -c rollup.test-unit-config.js && nyc mocha dist/test-unit.bundle.js",
     "test-integration": "npm run build && rollup -c rollup.test-integration-config.js && mocha dist/test-integration.bundle.js",
     "watch-main": "rollup -cw --environment DEST:main",
     "watch-pserver": "rollup -cw --environment DEST:pserver",
@@ -39,6 +40,7 @@
     "chai": "^4.2.0",
     "lodash": "^3.10.1",
     "mocha": "^5.2.0",
+    "nyc": "^15.0.0",
     "prettier": "^1.14.0",
     "rollup": "^0.63.5",
     "rollup-plugin-buble": "^0.19.4",
