--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "push-season": "rollup -c --environment DEST:season",
     "push-sim": "rollup -c --environment DEST:sim",
     "test": "npm run test-unit && npm run test-integration",
-    "test-unit": "mocha screepsAI/test/unit/**/*.ts",
+    "test-unit": "mocha screepsAI/test/unit/",
     "test-integration": "echo 'See docs/in-depth/testing.md for instructions on enabling integration tests'",
     "watch-main": "rollup -cw --environment DEST:main",
     "watch-pserver": "rollup -cw --environment DEST:pserver",
