--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "push-sim": "rollup -c --environment DEST:sim",
     "test": "npm run test-unit && npm run test-integration",
     "test-unit": "mocha screepsAI/test/unit/",
-    "test-integration": "echo 'See docs/in-depth/testing.md for instructions on enabling integration tests'",
+    "test-integration": "npm run build && mocha --config .mocharc.integration.json screepsAI/test/integration/**/*.ts",
     "watch-main": "rollup -cw --environment DEST:main",
     "watch-pserver": "rollup -cw --environment DEST:pserver",
     "watch-sim": "rollup -cw --environment DEST:sim"
@@ -55,6 +55,7 @@
     "rollup-plugin-clear": "^2.0.7",
     "rollup-plugin-screeps": "^1.0.0",
     "rollup-plugin-typescript2": "^0.27.0",
+    "screeps-server-mockup": "^1.5.1",
     "sinon": "^6.3.5",
     "sinon-chai": "^3.2.0",
     "ts-node": "^8.8.2",
@@ -62,6 +63,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "isolated-vm": "^2.1.0",
     "source-map": "~0.6.1"
   }
 }
